:recycle: refactor: change name of ErrorMonitoringProvider

--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,8 @@ def excludePatterns = [
         "**/*Filter*",
         "**/*Resolver*",
         "**/*Error*",
-        "**/*Entity*"
+        "**/*Entity*",
+        "**/*Provider*"
 ]
 
 test {
