--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+    implementation 'net.gpedro.integrations.slack:slack-webhook:1.4.0'
     implementation 'mysql:mysql-connector-java:8.0.33'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -58,7 +59,9 @@ def excludePatterns = [
         "**/*Filter*",
         "**/*Resolver*",
         "**/*Error*",
-        "**/*Entity*"
+        "**/*Entity*",
+        "**/*Provider*",
+        "**/domain/*"
 ]
 
 test {
