:recycle: refactor: modify domain and jpa entity (#61)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,8 @@ spring:
     active: dev
   datasource:
     url: none
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
