--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -18,3 +18,12 @@ kakao:
 error:
   webhook:
     url: ${PROD_WEBHOOK_URL}
+
+cloud:
+  naver:
+    credentials:
+      end-point: "https://kr.object.ncloudstorage.com"
+      region: "kr-standard"
+      access-key: ${OBJECT_STORAGE_ACCESS_KEY}
+      secret-key: ${OBJECT_STORAGE_SECRET_KEY}
+      bucket: "praise-up-image"
